--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cc.android.pdf"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.krxkid.android.pdf"
+          android:versionCode="1"
+          android:versionName="1.0">
+  <!-- 亮度遮罩悬浮窗权限 -->
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+  <uses-permission android:name="com.krxkid.android.provider.play"/>
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="19" />
 
-    <instrumentation
-        android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.cc.android.pdf" />
+  <uses-sdk
+    android:minSdkVersion="15"
+    android:targetSdkVersion="19" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
-        >
-        <uses-library android:name="android.test.runner" />
+  <instrumentation
+    android:name="android.test.InstrumentationTestRunner"
+    android:targetPackage="com.cc.android.pdf" />
 
-        <activity
-            android:name=".MuPdfForActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+  <application
+    android:allowBackup="true"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
+    >
+    <meta-data
+      android:name="roboguice.modules"
+      android:value="com.cc.android.pdf.AndroidModule" />
+    <uses-library android:name="android.test.runner" />
+
+    <activity
+      android:name="com.cc.android.pdf.MuPdfForActivity"
+      android:launchMode="singleTask"
+      android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:mimeType="application/pdf" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
