--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="1.0">
   <!-- 亮度遮罩悬浮窗权限 -->
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-  <uses-permission android:name="com.krxkid.android.provider.play"/>
+  <uses-permission android:name="com.krxkid.android.provider.play" />
 
 
   <uses-sdk
@@ -14,7 +14,7 @@
 
   <instrumentation
     android:name="android.test.InstrumentationTestRunner"
-    android:targetPackage="com.cc.android.pdf" />
+    android:targetPackage="com.krxkid.android.pdf" />
 
   <application
     android:allowBackup="true"
@@ -31,6 +31,10 @@
       android:name="com.cc.android.pdf.MuPdfForActivity"
       android:launchMode="singleTask"
       android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
